refactor: Capacity api